# algoshort

./: CLAUDE.md  ENI.MI.ipynb  ENI.MI_executed.ipynb  analyze_results.py  config.py  generate_notebooks.py  lstm.m  main.py  pyproject.toml  tickers_italy.txt  tickers_nasdaq.txt
algoshort/: ohlcprocessor.py  position_sizing.py  regime_fc.py
notebooks/: A2A_MI.ipynb  AMP_MI.ipynb  ANIM_MI.ipynb  AZM_MI.ipynb  BAMI_MI.ipynb  BC_MI.ipynb  BGN_MI.ipynb  BMED_MI.ipynb  BPE_MI.ipynb  BZU_MI.ipynb  CEM_MI.ipynb  CPR_MI.ipynb  DIA_MI.ipynb  ELN_MI.ipynb  ENAV_MI.ipynb  ENEL_MI.ipynb  ENI_MI.ipynb  ERG_MI.ipynb  FBK_MI.ipynb  GVS_MI.ipynb  G_MI.ipynb  HER_MI.ipynb  IGD_MI.ipynb  IGV_MI.ipynb  INW_MI.ipynb  IP_MI.ipynb  ISP_MI.ipynb  ITW_MI.ipynb  JUVE_MI.ipynb  LDO_MI.ipynb  LUVE_MI.ipynb  MARR_MI.ipynb  MB_MI.ipynb  MONC_MI.ipynb  NEXI_MI.ipynb  OVS_MI.ipynb  PIA_MI.ipynb  PIRC_MI.ipynb  PRY_MI.ipynb  PST_MI.ipynb  (+16 more)
results/: A2A_MI_equity.csv  A2A_MI_grid_search.csv  A2A_MI_signals.csv  AMP_MI_equity.csv  AMP_MI_grid_search.csv  AMP_MI_signals.csv  ANIM_MI_equity.csv  ANIM_MI_grid_search.csv  ANIM_MI_signals.csv  AZM_MI_equity.csv  AZM_MI_grid_search.csv  AZM_MI_signals.csv  BAMI_MI_equity.csv  BAMI_MI_signals.csv  BC_MI_equity.csv  BC_MI_grid_search.csv  BC_MI_signals.csv  BGN_MI_equity.csv  BGN_MI_grid_search.csv  BGN_MI_signals.csv  BMED_MI_equity.csv  BMED_MI_grid_search.csv  BMED_MI_signals.csv  BPE_MI_equity.csv  BPE_MI_grid_search.csv  BZU_MI_equity.csv  BZU_MI_grid_search.csv  CEM_MI_equity.csv  CEM_MI_grid_search.csv  CPR_MI_equity.csv  CPR_MI_grid_search.csv  (+112 more)
(+656 files in other folders)
