[tool.poetry]
name = "algoshort"
version = "0.1.0"
description = "A package for algorithmic short trading"
authors = ["Luigi <luigi@example.com>"]
readme = "README.md"
packages = [
    { include = "algoshort"}
]

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.6,<4.0.0"
numpy = ">=2.3.2,<3.0.0"
pandas = ">=1.5"
scipy = ">=1.16.1,<2.0.0"
yfinance = ">=0.2.65,<0.3.0"
tqdm = ">=4.65.0"
pyarrow = ">=14.0.0"
joblib = ">=1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
